scrum-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrum-app-deployment
  labels:
    app: scrum-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrum-app
  template:
    metadata:
      labels:
        app: scrum-app
    spec:
      containers:
      - name: scrum-app
        image: zeinebmessaoudi/backend:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: scrum-app
spec:
  selector:
    app: scrum-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
