scrum-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrum-ui-deployment
  labels:
    app: scrum-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrum-ui
  template:
    metadata:
      labels:
        app: scrum-ui
    spec:
      containers:
      - name: scrum-ui
        image: zeinebmessaoudi/frontend:latest
        ports:
        - containerPort: 4200

---

apiVersion: v1
kind: Service
metadata:
  name: scrum-ui-service
spec:
  type: NodePort
  selector:
    app: scrum-ui
  ports:
  - protocol: TCP
    port: 4200
    targetPort: 4200
    nodePort: 30086  # Optional: Specify a nodePort if you want a fixed port to access the service. Otherwise, Kubernetes assigns one randomly.
